--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Aaron Ammon Portfolio</title>
+    <title>Aaron Ammon's Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
 
