--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         
 <a href = "javascript:void(0)" onclick = "document.getElementById('light2').style.display='block';document.getElementById('fade2').style.display='block'" class="hover1">
 
-                             <img src="ads.jpg" alt="American Disability Solutions" height="256" width="300">
+                             <img src="http://imgur.com/2ioJIwa.jpg" alt="American Disability Solutions" height="256" width="300">
     </a>
                <a href = "javascript:void(0)" onclick = "document.getElementById('light2').style.display='block';document.getElementById('fade2').style.display='block'" class="hover1">
                         <h4 class="service-heading" >American Disability Solutions</h4>
