--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="wow fadeInUp  section-heading">About Me</h2>
-                    <h3 class="wow fadeInUp  text-muted">My name is Aaron Ammon and I have a passion for UX/UI and front end development. I focus on more than just the look – a great website offers usability, simplicity, and functionality. The first thing users notice when visiting a site is the overall look and feel. My goal is to make a great first impression. </h3>
-                    <h3 class="wow fadeInUp  text-muted">Outside of work I love snowboarding, playing basketball, and conversing sarcastically.</h3>
+                    <h3 class="wow fadeInUp  text-muted" style="text-align:left">&nbsp;&nbsp;&nbsp;My name is Aaron Ammon and I have a passion for UX/UI and front end development. I focus on more than just the look – a great website offers usability, simplicity, and functionality. The first thing users notice when visiting a site is the overall look and feel. My goal is to make a great first impression. </h3>
+                    <h3 class="wow fadeInUp  text-muted" style="text-align:left">&nbsp;&nbsp;&nbsp;Outside of work I love snowboarding, playing basketball, and conversing sarcastically.</h3>
                     
                 </div>
             </div>
